--- a/manicure_backend/src/main/resources/application.properties
+++ b/manicure_backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=manicure_backend
 
 # PostgresSql
-spring.datasource.url=jdbc:postgresql://localhost:5432/meubanco
+spring.datasource.url=jdbc:postgresql://localhost:5432/manicure
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=sua_senha_do_postgres_server
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
