--- a/manicure_backend/src/main/resources/application.properties
+++ b/manicure_backend/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Configura o padrão de data para JSON
+spring.jackson.date-format=dd/MM/yyyy
+
+# Configura o fuso horário para o Brasil (opcional)
+spring.jackson.time-zone=GMT-3
