filtro por nome

--- a/manicure_backend/src/main/resources/application.properties
+++ b/manicure_backend/src/main/resources/application.properties
@@ -1,19 +1,34 @@
 spring.application.name=manicure_backend
 
 # PostgresSql
-spring.datasource.url=jdbc:postgresql://localhost:5432/manicure
-spring.datasource.username=postgres
-spring.datasource.password=sua_senha_do_postgres_server
-spring.datasource.driver-class-name=org.postgresql.Driver
+!spring.datasource.url=jdbc:postgresql://localhost:5432/manicure
+# spring.datasource.username=postgres
+# spring.datasource.password=sua_senha_do_postgres_server
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Configura o padrão de data para JSON
 spring.jackson.date-format=dd/MM/yyyy
 
 # Configura o fuso horário para o Brasil (opcional)
 spring.jackson.time-zone=GMT-3
+
+# Configurações do H2 Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# Configurações do JPA e do Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Ativa o console do H2 para visualizar o banco de dados
+spring.h2.console.enabled=true
