--- a/manicure_backend/pom.xml
+++ b/manicure_backend/pom.xml
@@ -46,15 +46,25 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.2.0</version>
+		</dependency>
+		<!--<dependency>
         	<groupId>org.postgresql</groupId>
         	<artifactId>postgresql</artifactId>
         	<scope>runtime</scope>
-    	</dependency>
+    	</dependency> -->
 		<dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-data-jpa</artifactId>
     	</dependency>
-		
+		<!-- Dependência do H2 Database (temporário, em memória) -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<!--opcional deve ser estudado-->
 		<dependency>
         	<groupId>org.springframework.boot</groupId>
