--- a/manicure_backend/pom.xml
+++ b/manicure_backend/pom.xml
@@ -46,10 +46,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		<groupId>org.springdoc</groupId>
-		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-		<version>2.2.0</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+		
 		<!--<dependency>
         	<groupId>org.postgresql</groupId>
         	<artifactId>postgresql</artifactId>
@@ -65,6 +70,7 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<!--opcional deve ser estudado-->
 		<dependency>
         	<groupId>org.springframework.boot</groupId>
